# pandasai-chainlit-docker-deployment-template

./: Dockerfile  README.md  chainlit.md  pyproject.toml  pyvenv.cfg
cache/: cache_db_0.10.db  cache_db_0.10.db.wal
demo_app/: _utils.py  main.py
